--- a/SeleniumFinal/pom.xml
+++ b/SeleniumFinal/pom.xml
@@ -1,6 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.anr</groupId>
 	<artifactId>SeleniumFinal</artifactId>
@@ -18,6 +21,6 @@
 			<artifactId>webdrivermanager</artifactId>
 			<version>5.0.3</version>
 		</dependency>
-		
+
 	</dependencies>
 </project>
